[package]
name = "ceasar_macro"
version = "0.1.0"
edition = "2021"
description = "A proc macro for evaluating ascii alphabetic character ciphers."
keywords = ["ceasar", "cipher"]
homepage = "https://github.com/1git2clone/ceasar_cipher"
repository = "https://github.com/1git2clone/ceasar_cipher"
license = "MIT"
readme = "README.md"
include = ["src/**/*", "LICENSE.md", "README.md"]

[dependencies]
proc-macro2 = "1.0.89"
quote = "1.0.37"
syn = { version = "2.0.85", features = ["full"] }

[lib]
proc-macro = true
